<resources>
    <string name="app_name">Tam Calendar</string>
    <string name="title_new_event">Add new event</string>
    <string name="title_edit_event">Edit event</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Tam Calendar</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="action_fr">Events</string>
    <string name="action_edit_fr">Edit</string>
    <string name="action_detail_fr">Details</string>
    <string name="action_delete_fr">Delete</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_actor">Select actor</string>
    <string name="search">Search…</string>
    <string name="new_event">New event</string>
    <string name="actor">Actor</string>
    <string name="name">Name</string>
    <string name="name_req">Name *</string>
    <string name="select_scale">Select mood</string>
    <string name="scale">Mood</string>
    <string name="confirm">Confirm</string>
    <string name="description">Description</string>
    <string name="color">Color</string>
    <string name="add">Add</string>
    <string name="add_new">Add new %1$s value</string>
    <string name="select_ref">Select %1$s value</string>
    <string name="edit_existing">Edit %1$s value</string>
    <string name="edit">Edit</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="options">Options</string>
    <string name="add_new_scale">Add new mood</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>
    <string name="time">Time</string>
    <string name="title_new_emotion">Track new mood</string>
    <string name="title_edit_emotion">Edit mood</string>
    <string name="export_info">Export info</string>
    <string name="export">Database Export</string>
    <string name="export_cancelled">Export cancelled</string>
    <string name="export_info_1">This database requires to save 3 separate files!</string>
    <string name="export_info_2">You\'re free to choose the save location.</string>
    <string name="export_info_3">Please follow the naming instructions for easy import.</string>
    <string name="export_button_1">Export [.db]</string>
    <string name="export_button_2">Export [.db-shm]</string>
    <string name="export_button_3">Export [.db-wal]</string>
    <string name="import_button_1">Import [.db]</string>
    <string name="import_button_2">Import [.db-shm]</string>
    <string name="import_button_3">Import [.db-wal]</string>
    <string name="finish_or_cancel">Finish / Cancel</string>
    <string name="importDB">Database Import</string>
    <string name="import_info">Import info</string>
    <string name="import_cancelled">Import cancelled!</string>
    <string name="apply">Apply and restart</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="no_categories">No categories added</string>
    <string name="actions">Events</string>
    <string name="emotions">Moods</string>
    <string name="no_actions">No events on this day</string>
    <string name="no_emotion">No moods added on this day</string>
    <string name="time_ref">%1$d h:</string>
</resources>