<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ExportActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/importDB"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/export_info_1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/export_info_2" />

    <Button
        android:id="@+id/buttonSaveDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#FF9800"
        android:forceDarkAllowed="false"
        android:text="@string/import_button_1" />

    <Button
        android:id="@+id/buttonSaveSHM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#8BC34A"
        android:forceDarkAllowed="false"
        android:text="@string/import_button_2" />

    <Button
        android:id="@+id/buttonSaveWAL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#00BCD4"
        android:forceDarkAllowed="false"
        android:text="@string/import_button_3" />


    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="#4CAF50"
        android:forceDarkAllowed="false"
        android:layout_gravity="center"
        android:text="@string/apply" />


    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#F44336"
        android:forceDarkAllowed="false"
        android:layout_gravity="center"
        android:text="@string/cancel" />

</LinearLayout>