<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <View
        android:id="@+id/colorIconScale"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_below="@+id/selectedScaleLabel"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="8dp"
        android:background="#aaaaaa"
        android:forceDarkAllowed="false" />

    <TextView
        android:id="@+id/selectedScale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectedScaleLabel"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/colorIconScale"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/select_scale"
        android:padding="12dp"
        app:drawableEndCompat="@drawable/baseline_keyboard_arrow_down_24" />

    <TextView
        android:id="@+id/selectedScaleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/scale" />


    <View
        android:id="@+id/addButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/selectedScale"
        android:layout_alignParentEnd="true"
        android:foreground="@drawable/baseline_add_24" />

    <TextView
        android:id="@+id/categoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectedScale"
        android:text="@string/categories" />


    <ListView
        android:id="@+id/categoryList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/addButton"
        android:layout_above="@+id/container"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/no_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categoryLabel"
        android:text="@string/no_categories" />

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="@string/confirm" />

        <NumberPicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timeLabel"
            android:layout_marginEnd="12dp" />

        <TextView
            android:id="@+id/timeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_below="@+id/confirm_button"
            android:text="@string/time" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionLabel"
            android:layout_toEndOf="@id/timePicker"
            android:maxLines="6"
            android:background="@android:drawable/editbox_background" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@+id/timePicker"
            android:layout_below="@+id/confirm_button"
            android:text="@string/description" />
    </RelativeLayout>
</RelativeLayout>