<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/CalendarFragment">

    <fragment
        android:id="@+id/CalendarFragment"
        android:name="com.example.tamcalendar.CalendarFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_calendar">

        <action
            android:id="@+id/action_CalendarFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

        <action
            android:id="@+id/action_CalendarFragment_to_actionF"
            app:destination="@id/actionF" />

        <action
            android:id="@+id/action_CalendarFragment_to_ActionCreate"
            app:destination="@id/actionCreate" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.tamcalendar.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/CalendarFragment" />
    </fragment>

    <fragment
        android:id="@+id/actionF"
        android:name="com.example.tamcalendar.action.ActionFragment"
        android:label="@string/action_fr"
        tools:layout="@layout/fragment_action">

        <action
            android:id="@+id/action_actionF_to_FirstFragment"
            app:destination="@id/CalendarFragment" />
    </fragment>


    <fragment
        android:id="@+id/actionCreate"
        android:name="com.example.tamcalendar.action.ActionCreateFragment"
        android:label="@string/new_event"
        tools:layout="@layout/fragment_action_create">

        <action
            android:id="@+id/action_ActionCreate_to_Calendar"
            app:destination="@id/CalendarFragment" />
    </fragment>
</navigation>