<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".calendar.CalendarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.example.tamcalendar.calendar.TamCalendar
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:nestedScrollingEnabled="false"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#474747" />

        <TextView
            android:id="@+id/actionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/actions"
            android:textAlignment="center"
            android:textFontWeight="2"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/no_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/no_actions" />

        <com.example.tamcalendar.views.NonScrollListView
            android:id="@+id/calendar_action_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp" />


        <TextView
            android:id="@+id/emotionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/emotions"
            android:textAlignment="center"
            android:textFontWeight="2"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/no_emotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/no_emotion" />

        <com.example.tamcalendar.views.NonScrollListView
            android:id="@+id/calendar_emotion_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>