<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:padding="16dp">

    <TextView
        android:id="@+id/header"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="[header]"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/editTextNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/header"
        android:text="@string/name" />
    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNameLabel"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/name"
        android:padding="12dp"
        android:singleLine="true"
        android:autofillHints="name" />

    <TextView
        android:id="@+id/color_previewLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/edit_text"
        android:text="@string/color" />
    <View
        android:id="@+id/color_preview"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/color_previewLabel"
        android:forceDarkAllowed="false"
        android:background="#ff2222"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/color_preview"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/add"/>
</RelativeLayout>